refactor(billing): replace toList() with collect(Collectors.toList()) for bill filtering